INT133_Tavishi/force-app/main/default/objects/Customer__c/fields/HouseNo__c.field-meta.xml
<CustomField>
    <fullName>HouseNo__c</fullName>
    <label>HouseNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>