INT133_Tavishi/force-app/main/default/objects/Customer__c/fields/Total_no_of_accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_no_of_accounts__c</fullName>
    <label>Total no of accounts</label>
    <summaryForeignKey>Bank_account__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>